# Pong

./: .gitignore  CMakeLists.txt  README.md
build-windows/: build.bat
src/: CMakeLists.txt  main.cpp
src/include/: Ball.h  Game.h  Gamestate.h  MainMenuState.h  Paddle.h  Playstate.h
src/src/: Ball.cpp  Game.cpp  MainMenuState.cpp  Paddle.cpp  Playstate.cpp
